# py8bit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
notebooks/: 01_logic_gates.ipynb  02_combinational_circuits.ipynb  03_adders.ipynb  04_alu.ipynb  05_latches_flipflops.ipynb  06_registers.ipynb  07_counters.ipynb  08_memory.ipynb  09_clock_control.ipynb  10_isa.ipynb  11_instruction_decoder.ipynb  12_control_unit.ipynb  13_datapath.ipynb  14_cpu.ipynb  15_assembler.ipynb  16_full_system.ipynb
programs/: README.md  add_two_numbers.asm  conditional_loop.asm  fibonacci.asm  multiply.asm
solutions/: __init__.py  adders.py  alu.py  assembler.py  clock.py  combinational.py  control.py  counters.py  cpu.py  datapath.py  decoder.py  gates.py  isa.py  memory.py  registers.py  sequential.py  system.py
src/computer/: __init__.py  adders.py  alu.py  assembler.py  clock.py  combinational.py  control.py  counters.py  cpu.py  datapath.py  decoder.py  gates.py  isa.py  memory.py  registers.py  sequential.py  system.py
tests/: __init__.py  conftest.py  test_adders.py  test_alu.py  test_assembler.py  test_clock.py  test_combinational.py  test_control.py  test_counters.py  test_cpu.py  test_datapath.py  test_decoder.py  test_gates.py  test_isa.py  test_memory.py  test_registers.py  test_sequential.py  test_system.py
utils/: __init__.py  checker.py
utils/checker/: __init__.py  helpers.py  runner.py
utils/checker/tests/: __init__.py  test_adders.py  test_alu.py  test_assembler.py  test_clock.py  test_combinational.py  test_control.py  test_counters.py  test_cpu.py  test_datapath.py  test_decoder.py  test_gates.py  test_isa.py  test_memory.py  test_registers.py  test_sequential.py  test_system.py
