[project]
name = "8bit-computer"
version = "0.1.0"
description = "Build an 8-bit computer from scratch - an educational journey through computer architecture"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "8-Bit Computer Project"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: System :: Hardware",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "notebook>=7.0",
]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Student stub files have intentionally empty function bodies
module = "computer.*"
disable_error_code = ["empty-body"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Notebooks need imports after path setup and have different conventions
"notebooks/*.ipynb" = ["E402", "E702", "W291", "W293", "F841", "D100", "D102", "D107", "D205", "D415"]
# Checker needs imports after path modification
"utils/checker/__init__.py" = ["E402"]
# Test files - allow missing module and function docstrings
"utils/checker/tests/*.py" = ["D100", "D103"]
